gatekeeper/templates/forbid-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: forbidhostnetwork
spec:
  crd:
    spec:
      names:
        kind: ForbidHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package forbidhostnetwork
        violation[{"msg": msg, "details": {"host_network": objectName}}] {
            objectKind := input.review.kind.kind
            objectName := input.review.object.metadata.name
            input.review.object
            input_share_hostnamespace(input.review.object)
            msg := sprintf("%v/%v - Sharing the host network is not allowed", [objectKind, objectName])
        }
        input_share_hostnamespace(o) {
            o.spec.hostNetwork
        }

        input_share_hostnamespace(o) {
            o.spec.template.spec.hostNetwork
        }
